syntax = "proto3";

package api.payment.v1;

// events

message InvoicePaid {
  string id = 1;
  string order_id = 2;
}

// commands

message ConfirmPayment {
  string id = 1;
  double amount = 2;
}
